fix: overflow-x problem

--- a/src/app/terminal/terminal.page.scss
+++ b/src/app/terminal/terminal.page.scss
@@ -4,7 +4,6 @@
     height: 100%;
     padding: 0rem 1rem;
     display: block;
-    white-space: pre !important;
     background-color: #2D3134 !important;
 }
 
@@ -14,6 +13,7 @@
 
 .error {
     color: red;
+
 }
 
 .info {
